--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation "android.arch.persistence.room:runtime:1.1.0"
     implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-dynamic-links:16.0.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
 
     testImplementation 'junit:junit:4.12'
