--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".PCHomeActivity"
+            android:keepScreenOn="true"/>
+
     </application>
 
 </manifest>
